--- a/source/matchi-app_en-json--master_en.json
+++ b/source/matchi-app_en-json--master_en.json
@@ -17,7 +17,7 @@
   "bookings.addToCalendar": "Add to calendar",
   "bookings.addToCalendarFailure": "Could not add booking to \"%{name}\" calendar.",
   "bookings.addToCalendarNotFound": "Could not find any editable calendars on this device.",
-  "bookings.addToCalendarSuccess": "Booking added to \"%{name}\" calendar."
+  "bookings.addToCalendarSuccess": "Booking added to \"%{name}\" calendar.",
   "bookings.addToCalendarNotFound2": "Could not find any editable calendars on this device test.",
   "bookings.addToCalendarSuccess2": "Booking added to \"%{name}\" calendar test."
 }
